_table: Overflow fix

--- a/src/css/theme/_table.scss
+++ b/src/css/theme/_table.scss
@@ -356,6 +356,6 @@ th {
 }
 @media (min-width: 768px) {
   .table-responsive {
-    overflow: visible;
+    overflow: auto;
   }
 }
